fix: scrollbar-thumb color

--- a/assets/css/scrollbar.css
+++ b/assets/css/scrollbar.css
@@ -1,5 +1,5 @@
 :root {
-  --scrollbar: rgb(51 65 85);
+  --scrollbar: rgb(30 41 59);
   --scrollbar-hover: rgb(51 65 85);
   --scrollbar-bg: rgb(17 24 39);
 }
